--- a/app/src/main/res/layout/alert_activity.xml
+++ b/app/src/main/res/layout/alert_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/alert_activity"
     android:background="@drawable/backround_colors"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,5 +15,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hey!!!!!!!!!!!!!!!!!!!!!!!!" />
+
 </RelativeLayout>
