--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:background="@drawable/backround_colors"
@@ -9,10 +10,43 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.java.torin.listnermodule.MainActivity">
+    tools:context="com.java.torin.listnermodule.IntroActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hi"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="44dp"
+        android:id="@+id/textView2"
+        android:textSize="50sp"
+        android:fontFamily="sans-serif"/>
+
+    <TextView
+        android:text="This is app is made to help you just chill out, go from hot to not. This can only work if you trust me. Will you take a few minutes to tell me some info.
+"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:id="@+id/textView3"
+        android:textSize="30sp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        app:srcCompat="@android:drawable/checkbox_on_background"
+        android:id="@+id/Next"
+        android:background="@drawable/backround_colors"
+        android:layout_weight="0.45"
+
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
+
+
 </RelativeLayout>
