--- a/app/src/main/res/layout/alert_activity.xml
+++ b/app/src/main/res/layout/alert_activity.xml
@@ -29,7 +29,7 @@
         android:ems="10"
         android:layout_centerVertical="true"
         android:id="@+id/email"
-        android:text="Email"
+        android:text="Tell me whats going on:"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
