--- a/app/src/main/res/layout/email_activity.xml
+++ b/app/src/main/res/layout/email_activity.xml
@@ -19,7 +19,6 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:ems="10"
         android:layout_centerVertical="true"
         android:id="@+id/email"
@@ -27,7 +26,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:inputType="phone" />
 
     <ImageButton
         android:layout_width="match_parent"
