--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,29 +12,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.java.torin.listnermodule.IntroActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hi"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
-        android:id="@+id/textView2"
-        android:textSize="50sp"
-        android:fontFamily="sans-serif"/>
-
-    <TextView
-        android:text="This is app is made to help you just chill out, go from hot to not. This can only work if you trust me. Will you take a few minutes to tell me some info.
-"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:id="@+id/textView3"
-        android:textSize="30sp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ImageButton
 
         android:layout_width="match_parent"
@@ -48,6 +25,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="30dp" />
+
+    <TextView
+        android:text="Thank you for choosing CHILL to help you understand and manage behavior related to stress. CHILL will listen to your voice pattern and alert you when stress is indicated. You will be given the opportunity to describe the event and receive a text message. In addition to basic information CHILL ask you to calibrate you voice. Please click next to get started."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:textSize="24sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
