--- a/app/src/main/res/layout/sign_in_activity.xml
+++ b/app/src/main/res/layout/sign_in_activity.xml
@@ -51,12 +51,13 @@
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        app:srcCompat="@android:drawable/checkbox_on_background"
+        app:srcCompat="@drawable/chill"
         android:id="@+id/Next"
         android:background="@drawable/backround_colors"
         android:layout_weight="0.45"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="24dp"  />
+        android:layout_marginBottom="24dp"
+        android:scaleType="fitCenter" />
 </RelativeLayout>
