--- a/app/src/main/res/layout/listener_activity.xml
+++ b/app/src/main/res/layout/listener_activity.xml
@@ -32,12 +32,12 @@
         android:layout_height="100dp"
         app:srcCompat="@android:drawable/checkbox_off_background"
         android:id="@+id/Button2"
+        android:background="@drawable/backround_colors"
         android:layout_alignTop="@+id/Button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="84dp"
-        android:layout_marginEnd="84dp"
-        android:background="@drawable/backround_colors"/>
+        android:layout_toRightOf="@+id/Button"
+        android:layout_toEndOf="@+id/Button"
+        android:layout_marginLeft="59dp"
+        android:layout_marginStart="59dp" />
 
 
 </RelativeLayout>
