--- a/app/src/main/res/layout/sign_in_activity.xml
+++ b/app/src/main/res/layout/sign_in_activity.xml
@@ -6,17 +6,17 @@
     android:background="@drawable/backround_colors">
 
     <TextView
-        android:text="Name"
+        android:text="Full Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
         android:layout_marginStart="34dp"
         android:layout_marginTop="21dp"
         android:id="@+id/textView5"
-        android:textSize="32dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="32sp"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -36,7 +36,7 @@
         android:layout_alignLeft="@+id/editText"
         android:layout_alignStart="@+id/editText"
         android:id="@+id/textView6"
-        android:textSize="32dp"/>
+        android:textSize="32sp"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -60,4 +60,6 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="24dp"
         android:scaleType="fitCenter" />
+
+
 </RelativeLayout>
