--- a/app/src/main/res/layout/yell_activity.xml
+++ b/app/src/main/res/layout/yell_activity.xml
@@ -38,5 +38,14 @@
         android:id="@+id/button2"
         android:background="@drawable/backround_colors"/>
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textView7" />
+
 
 </RelativeLayout>
