--- a/app/src/main/res/layout/listener_activity.xml
+++ b/app/src/main/res/layout/listener_activity.xml
@@ -17,27 +17,35 @@
     <ImageButton
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@android:drawable/ic_media_play"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        app:srcCompat="@android:drawable/checkbox_off_background"
+        android:id="@+id/Button2"
+        android:background="@drawable/backround_colors"
         android:layout_marginLeft="56dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="63dp"
-        android:id="@+id/Button"
-        android:background="@drawable/backround_colors"/>
+        android:layout_below="@+id/textView4"
+        android:layout_toRightOf="@+id/Button"
+        android:layout_toEndOf="@+id/Button" />
 
     <ImageButton
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@android:drawable/checkbox_off_background"
-        android:id="@+id/Button2"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:layout_marginLeft="62dp"
+        android:layout_marginStart="62dp"
+        android:id="@+id/Button"
         android:background="@drawable/backround_colors"
-        android:layout_alignTop="@+id/Button"
-        android:layout_toRightOf="@+id/Button"
-        android:layout_toEndOf="@+id/Button"
-        android:layout_marginLeft="59dp"
-        android:layout_marginStart="59dp" />
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Resign In"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Button2"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/button4"
+        android:background="@drawable/backround_colors"/>
 
 
 </RelativeLayout>
