--- a/app/src/main/res/layout/yell_activity.xml
+++ b/app/src/main/res/layout/yell_activity.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/backround_colors">
     <TextView
-        android:text="Now, let's get some yelling information...This will take about 10 seconds. Please place your device 5 feet away and yell this sentence after you push calibrate: 'Hey, stop that! Get away! No!'"
+        android:text="Now, let's get some yelling information...This will take about 10 seconds. Please hold your device new arms length away and yell this sentence after you push calibrate: 'Hey, stop that! Get away! No!'"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -39,13 +39,22 @@
         android:background="@drawable/backround_colors"/>
 
     <TextView
-        android:text=" "
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:id="@+id/textView7" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:id="@+id/textView10" />
 
 
 </RelativeLayout>
